--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.2",
+    "@angular/cdk": "^10.0.1",
     "@angular/common": "~10.0.2",
     "@angular/compiler": "~10.0.2",
     "@angular/core": "~10.0.2",
+    "@angular/fire": "^6.0.2",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~10.0.2",
+    "@angular/material": "^10.0.1",
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "angularx-qrcode": "^10.0.3",
+    "firebase": "^7.15.5",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
