--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~10.0.2",
     "angularx-qrcode": "^10.0.3",
     "firebase": "^7.15.5",
+    "jsqr": "^1.3.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
