--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "@angular/service-worker": "~10.0.2",
     "angularx-qrcode": "^10.0.3",
     "firebase": "^7.15.5",
     "jsqr": "^1.3.1",
