--- a/package.json
+++ b/package.json
@@ -25,10 +25,15 @@
     "@angular/router": "~10.0.2",
     "@angular/service-worker": "~10.0.2",
     "angularx-qrcode": "^10.0.3",
+    "chart.js": "^2.9.3",
+    "file-saver": "^2.0.2",
     "firebase": "^7.15.5",
     "jsqr": "^1.3.1",
+    "mat-table-exporter": "^9.0.2",
+    "ng2-charts": "^2.3.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
+    "xlsx": "^0.16.4",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
